Change from test database to real database

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-ATLAS_URI = mongodb+srv://ryanliew:aHU3IU3xqgwhRq7X@recenseo.yyfpfaw.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI = mongodb+srv://ryanliew:aHU3IU3xqgwhRq7X@recenseo.yyfpfaw.mongodb.net/recenseoDB
 MONGO_DB_NAME = recenseoDB
 PORT = 5001
 SECRET = "SENG513Recenseo2022"
